[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1"
path = "day1/day1.rs"

[[bin]]
name = "day1_trie"
path = "day1/day1_trie.rs"

[[bin]]
name = "day1_no_replace"
path = "day1/day1_no_replace.rs"

[[bin]]
name = "day2"
path = "day2/day2.rs"

[[bin]]
name = "day3"
path = "day3/day3.rs"
